# ChessShock

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt
chessshock/: __init__.py  alerts.py  cli.py  config.py  lichess.py  monitor.py  oauth.py  setup_wizard.py
